--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -31,6 +31,9 @@ jobs:
       packages: write
       
     steps:
+      - 
+        name: Checkout
+        uses: actions/checkout@v2
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
