--- a/crates/lightning_node_client/Cargo.toml
+++ b/crates/lightning_node_client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 prost = "0.12.3"
-tonic = "0.10.2"
+tonic = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
 tower = { workspace = true }
