--- a/.github/workflows/publish-cashu.yml
+++ b/.github/workflows/publish-cashu.yml
@@ -1,4 +1,4 @@
-name: ci
+name: publish-cashu
 
 on:
   push:
@@ -19,12 +19,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - dockerfile: ./lightning-node/Dockerfile
-            image: ghcr.io/walletka/lightning-node
           - dockerfile: ./cashu-api/Dockerfile
             image: ghcr.io/walletka/cashu-api
-          - dockerfile: ./lsp-api/Dockerfile
-            image: ghcr.io/walletka/lsp-api
 
     permissions:
       contents: read
